# k-anonymity-decay

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
results/: analysis_report.yaml
results/simulation_output/: progressive_progressive_refinement_k_by_turn.csv  progressive_progressive_refinement_threshold_stats.csv  random_random_ordering_k_by_turn.csv  random_random_ordering_threshold_stats.csv  rarity_rarity-ordered_k_by_turn.csv  rarity_rarity-ordered_threshold_stats.csv
results/tables/: table1_demographic_summary.csv  table2_k_by_turn.csv  table3_threshold_stats.csv
scripts/: check_consistency.py  make_panels_ab_conversation_example.py  regenerate_figures.py
src/: __init__.py  anonymity_engine.py  data_loader.py  disclosure_models.py  display_utils.py  simulation_runner.py  visualization.py
tests/: test_k_anonymity_verification.py
